# gm-restaurant-mcp

./: .cache_ggshield  .gitignore  COMPARISON_YELP_VS_GOOGLE.md  MCP_CONFIGURATION_GUIDE.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETE.md  README.md  README_YELP.md  YELP_API_GUIDE.md  YELP_QUICKSTART.md  YELP_SETUP_SUMMARY.md  pyproject.toml  setup_api_key.bat  setup_api_key.ps1  setup_api_key.sh  setup_optimization.sh  setup_yelp_key.bat  setup_yelp_key.ps1  setup_yelp_key.sh
.cache_yelp/: stats.json  usage.json
.kiro/hooks/: auto-commit-changes.kiro.hook  gitleaks-secret-scan.kiro.hook
.kiro/settings/: mcp.json  mcp.json.example
restaurant_finder_mcp/: __init__.py  cache.py  optimized_client.py  server.py  usage_tracker.py
yelp_finder_mcp/: __init__.py  cache.py  optimized_client.py  server.py  usage_tracker.py
