[project]
name = "restaurant-finder-mcp"
version = "0.1.0"
description = "MCP servers for finding restaurants using Google Maps and Yelp"
requires-python = ">=3.9"
dependencies = [
    "googlemaps>=4.10.0",
    "requests>=2.31.0"
]

[project.scripts]
restaurant-finder-mcp = "restaurant_finder_mcp.server:main"
yelp-finder-mcp = "yelp_finder_mcp.server:main"
